# sudokulib

./: .travis.yml  CMakeLists.txt  NaiveSolver.cpp  NaiveSolver.h  NaiveSolver_tests.cpp  README.md  Sudoku.cpp  Sudoku.h  main.cpp
solver/: CMakeLists.txt  solver.cpp
solverlib/: CMakeLists.txt  NaiveSolver.cpp  NaiveSolver.h  NaiveSolver_tests.cpp  solverlib-tests.cpp  solverlib.cpp  solverlib.h
sudokulib/: CMakeLists.txt  Sudoku.cpp  Sudoku.h  Sudoku_tests.cpp  sudokulib-tests.cpp  sudokulib.cpp  sudokulib.h
sudokus/: faulty.txt  test.txt
