add_library(solverlib SHARED solverlib.h solverlib.cpp)
target_link_libraries(solverlib pthread)
IF (BUILD_TESTS)
    add_executable(solverlib-tests solverlib-tests.cpp)
    target_link_libraries(solverlib-tests solverlib sudokulib Boost::unit_test_framework)
    target_include_directories(solverlib-tests PUBLIC ${Boost_INCLUDE_DIRS})
ENDIF ()

IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    target_compile_options(solverlib PRIVATE -O0 -Wall -Wpedantic -Wextra)
ENDIF ()
