add_library(solverlib SHARED solverlib.h solverlib.cpp)
target_link_libraries(solverlib pthread)
IF (BUILD_TESTS)
    add_executable(solverlib-tests solverlib-tests.cpp)
    target_compile_options(solverlib-tests PRIVATE -O0 -Wall -Wpedantic -Wextra -g --coverage)
    target_link_libraries(solverlib-tests solverlib sudokulib Boost::unit_test_framework gcov)
    target_include_directories(solverlib-tests PUBLIC ${Boost_INCLUDE_DIRS})
ENDIF ()

IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    target_compile_options(solverlib PRIVATE -O0 -Wall -Wpedantic -Wextra -fprofile-arcs -ftest-coverage -g --coverage)
    target_link_libraries(solverlib gcov)
    target_link_options(solverlib PRIVATE -fprofile-arcs -lgcov)
ENDIF ()
